--- a/contact.html
+++ b/contact.html
@@ -93,18 +93,18 @@
           <div class="col-md-7">
             <div class="user-menu">
               <ul>
-                <li>
+                <li style="display: none;">
                   <a href="#"><i class="fa fa-user"></i> My Account</a>
                 </li>
-                <li>
+                <li style="display: none;">
                   <a href="#"><i class="fa fa-heart"></i> Wishlist</a>
                 </li>
                 <li>
-                  <a href="cart.html"><i class="fa fa-user"></i> My Cart</a>
+                  <a href="cart.html"><i class="fa fa-user"></i> Giỏ hàng của tôi</a>
                 </li>
                 <li>
                   <a href="checkout.html"
-                    ><i class="fa fa-user"></i> Checkout</a
+                    ><i class="fa fa-user"></i> Phản hồi</a
                   >
                 </li>
                 <li>
@@ -114,7 +114,7 @@
                     data-target="#login-dialog"
                     onclick="switchForm('login')"
                   >
-                    <i class="fa fa-user"></i> Login</a
+                    <i class="fa fa-user"></i> Đăng nhập</a
                   >
                 </li>
               </ul>
@@ -135,7 +135,7 @@
                       >VNĐ <span class="flag-icon flag-icon-vn"></span></span
                     ><b class="caret"></b
                   ></a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu" style="display: none;">
                     <li class="dropdown-item">
                       <a href="#"
                         ><span class="flag-icon flag-icon-us"></span> USD</a
@@ -156,11 +156,11 @@
                     class="dropdown-toggle"
                     href="#"
                     ><span class="key">Ngôn ngữ : </span
-                    ><span class="value">Vietnamese </span
+                    ><span class="value">Tiếng Việt </span
                     ><span class="flag-icon flag-icon-vn"></span
                     ><b class="caret"></b
                   ></a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu" style="display: none;">
                     <li class="dropdown-item">
                       <a href="#"
                         ><span class="flag-icon flag-icon-us"></span> English</a
@@ -169,7 +169,7 @@
                     <li class="dropdown-item">
                       <a href="#"
                         ><span class="flag-icon flag-icon-vn"></span>
-                        Vietnamese</a
+                        Tiếng Việt</a
                       >
                     </li>
                   </ul>
@@ -188,7 +188,7 @@
           <div class="col-sm-6">
             <div class="logo">
               <h1>
-                <a href="./"><img src="img/logo.png"/></a>
+                <a href="index.html"><img src="img/logo.png"/></a>
               </h1>
             </div>
           </div>
@@ -196,9 +196,9 @@
           <div class="col-sm-6">
             <div class="shopping-item">
               <a href="cart.html"
-                >Cart - <span class="cart-amunt">$100</span>
+                >Giỏ Hàng - <span class="cart-amunt">$100</span>
                 <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">5</span></a
+                <span class="product-count">99</span></a
               >
             </div>
           </div>
@@ -228,11 +228,11 @@
             -->
             <span class="navbar-toggler-icon"></span>
           </button>
-          <span class="navbar-brand">Bông Xù Store</span>
+          <span class="navbar-brand"><a href="index.html">Bông Xù Store</a></span>
           <!-- </div> -->
           <div class="navbar-collapse collapse" id="main-navbar-collapse">
             <ul class="nav navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="index.html">
                   <span class="nav-hidden"
                     ><span class="fa fa-2x fa-home"></span><br
@@ -254,9 +254,7 @@
               <!--
                 <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
               -->
-              <!--
-                <li class="nav-item"><a class="nav-link" href="checkout.html">Checkout</a></li>
-              -->
+  
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -275,23 +273,29 @@
                   class="dropdown-menu dropdown-menu-left"
                   aria-labelledby="category-dropdown"
                 >
-                  <a href="#" class="dropdown-item">Gấu bông</a>
-                  <a href="#" class="dropdown-item">Thỏ bông</a>
-                  <a href="#" class="dropdown-item">Mèo bông</a>
-                  <a href="#" class="dropdown-item">Chó bông</a>
-                  <a href="#" class="dropdown-item">Huấn bóng</a>
+                  <a href="shop.html" class="dropdown-item">Thú bông nhỏ</a>
+                  <a href="shop.html" class="dropdown-item">Thú bông lớn</a>
+                  <a href="shop.html" class="dropdown-item">Thú bông pokemon</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="cart.html">
                   <span class="nav-hidden"
                     ><span class="fa fa-2x fa-gift"></span><br
                   /></span>
-                  Khuyến mãi
+                  Giỏ hàng
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="checkout.html">
+                  <span class="nav-hidden">
+                    <span class="fa fa-2x far fa-credit-card"></span><br>
+                  </span>
+                  Thanh toán
+                </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="contact.html">
                   <span class="nav-hidden"
                     ><span class="fa fa-2x fa-phone"></span><br
                   /></span>
@@ -369,60 +373,53 @@
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <div class="footer-about-us">
-              <h2>u<span>Stora</span></h2>
+              <h2><span>Bông Xù Store</span></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Perferendis sunt id doloribus vero quam laborum quas alias
-                dolores blanditiis iusto consequatur, modi aliquid eveniet
-                eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit,
-                debitis, quisquam. Laborum commodi veritatis magni at?
+                Cửa hàng chúng tôi bán tất cả các loại thú bông có trên Thế Giới. Chúng tôi liên kết với tất cả các công ty và doanh nghiệp nổi tiếng trên toàn Thế Giới, vì vậy chất lượng thú bông của chúng tôi rất tuyệt vời và đáng giá mà các bạn bỏ ra. Các bạn có thể đặt làm thú nhồi bông riêng theo mẫu hình, khuôn mà các bạn có, giá cả rất hợp lý, nhận, làm và giao hàng rất nhanh.
               </p>
               <div class="footer-social">
-                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
-                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-6">
             <div class="footer-menu">
-              <h2 class="footer-wid-title">User Navigation</h2>
+              <h2 class="footer-wid-title">Điều Hướng</h2>
               <ul>
-                <li><a href="#">My account</a></li>
-                <li><a href="#">Order history</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Vendor contact</a></li>
-                <li><a href="#">Front page</a></li>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li><a href="shop.html">Cửa hàng</a></li>
+                <li><a href="cart.html">Giỏ hàng</a></li>
+                <li><a href="checkout.html">Thanh toán</a></li>
+                <li><a href="contact.html">Liên hệ</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-6">
             <div class="footer-menu">
-              <h2 class="footer-wid-title">Categories</h2>
+              <h2 class="footer-wid-title">Danh Mục</h2>
               <ul>
-                <li><a href="#">Mobile Phone</a></li>
-                <li><a href="#">Home accesseries</a></li>
-                <li><a href="#">LED TV</a></li>
-                <li><a href="#">Computer</a></li>
-                <li><a href="#">Gadets</a></li>
+                <li><a href="shop.html">Thú bông nhỏ</a></li>
+                <li><a href="shop.html">Thú bông lớn</a></li>
+                <li><a href="shop.html">Thú bông POKEMON</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-6">
             <div class="footer-newsletter">
-              <h2 class="footer-wid-title">Newsletter</h2>
+              <h2 class="footer-wid-title">Nhận thông báo</h2>
               <p>
-                Sign up to our newsletter and get exclusive deals you wont find
-                anywhere else straight to your inbox!
+                Nếu bạn muốn nhận thông tin mới nhất của chúng tôi thường xuyên, hãy đăng ký Email ở đây nhé!
               </p>
               <div class="newsletter-form">
                 <form action="#">
-                  <input type="email" placeholder="Type your email" />
-                  <input type="submit" value="Subscribe" />
+                  <input type="email" placeholder="Nhập Email" />
+                  <input type="submit" value="Nhận thông báo" />
                 </form>
               </div>
             </div>
