--- a/single-product.html
+++ b/single-product.html
@@ -40,6 +40,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="">
+//    function showsp()
+
+//    window.onload = showsp;
+
+
+    </script>
 </head>
 
 <body>
@@ -305,48 +312,18 @@
 
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Các sản phẩm mới</h2>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
+                        <div id="SPNew">
+                          
                         </div>
                     </div>
 
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Sản phẩm bán chạy</h2>
-                        <ul>
-                            <li><a href="">Sony Smart TV - 2015</a></li>
-                            <li><a href="">Sony Smart TV - 2015</a></li>
-                            <li><a href="">Sony Smart TV - 2015</a></li>
-                            <li><a href="">Sony Smart TV - 2015</a></li>
-                            <li><a href="">Sony Smart TV - 2015</a></li>
+                        <ul id="SPBanChay">
+                            <!--<li><a href="">Sony Smart TV - 2015</a></li>-->
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-md-8">
                     <div class="product-content-right">
                         <div class="product-breadcroumb">
@@ -442,129 +419,26 @@
 
                                 </div>
                             </div>
-                        </div>
-
-
-                        <div class="related-products-wrapper">
-                            <h2 class="related-products-title">Sản phẩm liên quan</h2>
-                            <div class="related-products-carousel" id="mathang">
-                                <script type="">
-                                  function showsp()
-                                  {
-                                    document.getElementById('mathang').innerHTML =
-                                    '<div class="single-product"><div class="product-f-image"><img src="'+
-                                    data[0].LinkImageSP
-                                    +'"alt=""><div class="product-hover"><a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a><a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a></div></div><h2><a href="">'+
-                                    data[0].NameSP
-                                    +'</a></h2><div class="product-carousel-price"><ins>'+
-                                    data[0].SaleSP
-                                    +'</ins><del>'+
-                                    data[0].money
-                                    +'</del></div></div>';
-                                  }
-                                </script>
-
-<!--
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-1.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Sony Smart TV - 2015</a></h2>
-
-                                    <div class="product-carousel-price">
-                                        <ins>$700.00</ins> <del>$100.00</del>
-                                    </div>
-                                </div>
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-2.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-                                    <div class="product-carousel-price">
-                                        <ins>$899.00</ins> <del>$999.00</del>
-                                    </div>
-                                </div>
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-3.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Apple new i phone 6</a></h2>
-
-                                    <div class="product-carousel-price">
-                                        <ins>$400.00</ins> <del>$425.00</del>
-                                    </div>
-                                </div>
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-4.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Sony playstation microsoft</a></h2>
-
-                                    <div class="product-carousel-price">
-                                        <ins>$200.00</ins> <del>$225.00</del>
-                                    </div>
-                                </div>
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-5.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Sony Smart Air Condtion</a></h2>
-
-                                    <div class="product-carousel-price">
-                                        <ins>$1200.00</ins> <del>$1355.00</del>
-                                    </div>
-                                </div>
-                                <div class="single-product">
-                                    <div class="product-f-image">
-                                        <img src="img/product-6.jpg" alt="">
-                                        <div class="product-hover">
-                                            <a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                            <a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a>
-                                        </div>
-                                    </div>
-
-                                    <h2><a href="">Samsung gallaxy note 4</a></h2>
-
-                                    <div class="product-carousel-price">
-                                        <ins>$400.00</ins>
-                                    </div>
-                                </div>
--->
-                            </div>
-                        </div>
+                        </div>    
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="related-products-wrapper">
+                        <h2 class="related-products-title" >Sản phẩm liên quan</h2>
+                        <div class="related-products-carousel" id="mathang">
+
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
     <div class="footer-top-area">
-      <div class="zigzag-bottom"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -716,6 +590,55 @@
 
     <!--data-->
     <script src="var.js"></script>
+    <script type="">
+        // San pham lien quan
+        var txt = "";
+        var n = data.length - 1;
+        for (var i=n; i >= n-9 && i>=0; i--)
+            txt += '<div class="single-product" style="width: 300px; margin: 1px;" ><div class="product-f-image"><img style=" height: 297px;" src="'
+            +data[i].LinkImageSP+
+            '"alt=""><div class="product-hover"><a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a><a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a></div></div><h2><a href="">'
+            +data[i].NameSP+
+            '</a></h2><div class="product-carousel-price"><ins>'
+            +data[i].SaleSP+
+            '</ins><del>'
+            +data[i].money+
+            '</del></div></div>';
+
+        document.getElementById("mathang").innerHTML = txt;
+
+        // San pham moi 
+        txt = "";
+        var n = data.length - 1;
+        for (var i=n; i >= n-3 && i>=0; i--)
+
+            txt += '<div class="thubmnail-recent"><img src="'
+                    +data[i].LinkImageSP+
+                    '" class="recent-thumb" alt=""><h2><a href="">'
+                    +data[i].NameSP+
+                    '</a></h2><div class="product-sidebar-price"><ins>'
+                    +data[i].SaleSP+
+                    '</ins> <del>'
+                    +data[i].money+
+                    '</del></div></div>';
+
+        document.getElementById("SPNew").innerHTML = txt;
+
+        // San pham ban chay
+        txt = "";
+        var n = data.length - 1;
+        for (var i=n; i >= n-4 && i>=0; i--)
+
+            txt += '<li><a href="'
+                    +''+
+                    '">'
+                    +data[i].NameSP+
+                    '</a></li>';
+
+        document.getElementById("SPBanChay").innerHTML = txt;
+    </script>
+
+
 
     <!-- Latest jQuery form server -->
     <script src="js/jquery.min.js"></script>
