--- a/text.html
+++ b/text.html
@@ -447,24 +447,7 @@
 
                         <div class="related-products-wrapper">
                             <h2 class="related-products-title">Sản phẩm liên quan</h2>
-                            <div class="related-products-carousel" id="mathang">
-                                <script type="">
-                                  function showsp()
-                                  {
-                                    document.getElementById('mathang').innerHTML =
-                                    '<div class="single-product"><div class="product-f-image"><img src="'+
-                                    data[0].LinkImageSP
-                                    +'"alt=""><div class="product-hover"><a href="" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a><a href="" class="view-details-link"><i class="fa fa-link"></i>Thông tin</a></div></div><h2><a href="">'+
-                                    data[0].NameSP
-                                    +'</a></h2><div class="product-carousel-price"><ins>'+
-                                    data[0].SaleSP
-                                    +'</ins><del>'+
-                                    data[0].money
-                                    +'</del></div></div>';
-                                  }
-                                </script>
-
-<!--
+                            <div class="related-products-carousel">
                                 <div class="single-product">
                                     <div class="product-f-image">
                                         <img src="img/product-1.jpg" alt="">
@@ -554,9 +537,10 @@
                                         <ins>$400.00</ins>
                                     </div>
                                 </div>
--->
+
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -713,9 +697,6 @@
         </div>
       </div>
     </div>
-
-    <!--data-->
-    <script src="var.js"></script>
 
     <!-- Latest jQuery form server -->
     <script src="js/jquery.min.js"></script>
