--- a/checkout.html
+++ b/checkout.html
@@ -741,28 +741,13 @@
                                                     class="input-text ">
                                             </p>
                                             <div class="clear"></div>
-
-
-                                            <div class="create-account">
-                                                <p>Tạo tài khoản bằng cách điền thông tin vào bên dưới đây. Nếu bạn đã từng
-                                                  mua hàng tại đây, vui lòng đăng nhập ở đầu trang</p>
-                                                <p id="account_password_field" class="form-row validate-required">
-                                                    <label class="" for="account_password">Mật khẩu <abbr title="required"
-                                                            class="required">*</abbr>
-                                                    </label>
-                                                    <input type="password" value="" placeholder="Mật khẩu" id="account_password"
-                                                        name="account_password" class="input-text">
-                                                </p>
-                                                <div class="clear"></div>
-                                            </div>
-
                                         </div>
                                     </div>
 
                                     <div class="col-2">
                                         <div class="woocommerce-shipping-fields">
                                             <h3 id="ship-to-different-address">
-                                                <label class="checkbox" for="ship-to-different-address-checkbox">Giao hàng đến địa chỉa khác?</label>
+                                                <label class="checkbox" for="ship-to-different-address-checkbox" style="margin: 0; padding: 0">Giao hàng đến địa chỉ khác?</label>
                                                 <input type="checkbox" value="1" name="ship_to_different_address"
                                                     checked="checked" class="input-checkbox" id="ship-to-different-address-checkbox">
                                             </h3>
@@ -1085,11 +1070,6 @@
 
 
                                             </div>
-
-
-
-
-
                                             <p id="order_comments_field" class="form-row notes">
                                                 <label class="" for="order_comments">Ghi chú đặt hàng</label>
                                                 <textarea cols="5" rows="2" placeholder="Ghi chú về đơn hàng của bạn, v.d ghi chú đặc biệt về thông tin giao hàng."
@@ -1101,6 +1081,19 @@
 
                                     </div>
 
+                                </div>
+
+                                <div class="create-account">
+                                  <p>Tạo tài khoản bằng cách điền thông tin vào bên dưới đây. Nếu bạn đã từng
+                                    mua hàng tại đây, vui lòng đăng nhập ở đầu trang</p>
+                                  <p id="account_password_field" class="form-row validate-required">
+                                      <label class="" for="account_password">Mật khẩu <abbr title="required"
+                                              class="required">*</abbr>
+                                      </label>
+                                      <input type="password" value="" placeholder="Mật khẩu" id="account_password"
+                                          name="account_password" class="input-text">
+                                  </p>
+                                  <div class="clear"></div>
                                 </div>
 
                                 <h3 id="order_review_heading">Đơn hàng của bạn</h3>
