--- a/checkout.html
+++ b/checkout.html
@@ -406,8 +406,8 @@
 
                             <form enctype="multipart/form-data" action="#" class="checkout" method="post" name="checkout">
 
-                                <div id="customer_details" class="col2-set">
-                                    <div class="col-1">
+                                <div id="customer_details" class="row">
+                                    <div class="col-lg-6">
                                         <div class="woocommerce-billing-fields">
                                             <h3>Thông tin thanh toán</h3>
                                             <p id="billing_country_field" class="form-row form-row-wide address-field update_totals_on_change validate-required woocommerce-validated">
@@ -744,14 +744,14 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-2">
+                                    <div class="col-lg-6">
                                         <div class="woocommerce-shipping-fields">
                                             <h3 id="ship-to-different-address">
-                                                <label class="checkbox" for="ship-to-different-address-checkbox" style="margin: 0; padding: 0">Giao hàng đến địa chỉ khác?</label>
+                                                <label class="checkbox" for="ship-to-different-address-checkbox" style="margin-bottom: 0;">Giao hàng đến địa chỉ khác?</label>
                                                 <input type="checkbox" value="1" name="ship_to_different_address"
                                                     checked="checked" class="input-checkbox" id="ship-to-different-address-checkbox">
                                             </h3>
-                                            <div class="shipping_address" style="display: block;">
+                                            <!-- <div class="shipping_address" style="display: block;"> -->
                                                 <p id="shipping_country_field" class="form-row form-row-wide address-field update_totals_on_change validate-required woocommerce-validated">
                                                     <label class="" for="shipping_country">Quốc gia <abbr title="required"
                                                             class="required">*</abbr>
@@ -989,14 +989,14 @@
                                                         <option value="UG">Uganda</option>
                                                         <option value="UA">Ukraine</option>
                                                         <option value="AE">United Arab Emirates</option>
-                                                        <option selected="selected" value="GB">United Kingdom (UK)</option>
+                                                        <option value="GB">United Kingdom (UK)</option>
                                                         <option value="US">United States (US)</option>
                                                         <option value="UY">Uruguay</option>
                                                         <option value="UZ">Uzbekistan</option>
                                                         <option value="VU">Vanuatu</option>
                                                         <option value="VA">Vatican</option>
                                                         <option value="VE">Venezuela</option>
-                                                        <option value="VN">Vietnam</option>
+                                                        <option value="VN" selected>Vietnam</option>
                                                         <option value="WF">Wallis and Futuna</option>
                                                         <option value="EH">Western Sahara</option>
                                                         <option value="WS">Western Samoa</option>
@@ -1069,7 +1069,7 @@
                                                 <div class="clear"></div>
 
 
-                                            </div>
+                                            <!-- </div> -->
                                             <p id="order_comments_field" class="form-row notes">
                                                 <label class="" for="order_comments">Ghi chú đặt hàng</label>
                                                 <textarea cols="5" rows="2" placeholder="Ghi chú về đơn hàng của bạn, v.d ghi chú đặc biệt về thông tin giao hàng."
