Update fix Cart box

--- a/single-product.html
+++ b/single-product.html
@@ -153,11 +153,10 @@
 
           <div class="col-sm-6">
             <div class="shopping-item">
-              <a href="cart.html"
-                >Giỏ Hàng - <span class="cart-amunt">$100</span>
+              <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">99</span></a
-              >
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
+                <span class="product-count">99</span></a>
             </div>
           </div>
         </div>
