--- a/checkout.html
+++ b/checkout.html
@@ -152,11 +152,10 @@
 
           <div class="col-sm-6">
             <div class="shopping-item">
-              <a href="cart.html"
-                >Giỏ Hàng - <span class="cart-amunt">$100</span>
+              <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">99</span></a
-              >
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
+                <span class="product-count">99</span></a>
             </div>
           </div>
         </div>
@@ -191,9 +190,7 @@
             <ul class="nav navbar-nav mr-auto">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                  <span class="nav-hidden"
-                    ><span class="fa fa-2x fa-home"></span><br
-                  /></span>
+                  <span class="nav-hidden"><i class="fa fa-2x fa-home"></i><br/></span>
                   Trang chủ
                 </a>
               </li>
@@ -221,9 +218,7 @@
                   aria-expanded="false"
                   href="#"
                 >
-                  <span class="nav-hidden"
-                    ><span class="fa fa-2x fa-list-ul"></span><br
-                  /></span>
+                  <span class="nav-hidden"><i class="fa fa-2x fa-list-ul"></i><br/></span>
                   Danh mục
                 </a>
                 <div
@@ -246,16 +241,16 @@
               <li class="nav-item active">
                 <a class="nav-link" href="checkout.html">
                   <span class="nav-hidden">
-                    <span class="fa fa-2x far fa-credit-card"></span><br>
+                    <i class="fa fa-2x far fa-credit-card"></i><br>
                   </span>
                   Thanh toán
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">
-                  <span class="nav-hidden"
-                    ><span class="fa fa-2x fa-phone"></span><br
-                  /></span>
+                  <span class="nav-hidden">
+                    <i class="fa fa-2x fa-phone">
+                    </i><br/></span>
                   Liên hệ
                 </a>
               </li>
