--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
       rel="stylesheet"
       type="text/css"
     />
-<!--
-    <link href="http://fonts.googleapis.com/css?family=Raleway:400,100" rel="stylesheet" type="text/css"/>
--->
+    <!--
+      <link href="http://fonts.googleapis.com/css?family=Raleway:400,100" rel="stylesheet" type="text/css"/>
+    -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 
@@ -64,7 +64,7 @@
         float: left;
         width: 50%;
       }
-      
+
       .content-conntact-left input[type="text"] {
         width: 80%;
       }
@@ -97,7 +97,9 @@
                   <a href="#"><i class="fa fa-heart"></i> Wishlist</a>
                 </li>
                 <li>
-                  <a href="cart.html"><i class="fa fa-user"></i> Giỏ hàng của tôi</a>
+                  <a href="cart.html"
+                    ><i class="fa fa-user"></i> Giỏ hàng của tôi</a
+                  >
                 </li>
                 <li>
                   <a href="checkout.html"
@@ -165,8 +167,8 @@
                     </li>
                     <li class="dropdown-item">
                       <a href="#"
-                        ><span class="flag-icon flag-icon-vn"></span>
-                        Tiếng Việt</a
+                        ><span class="flag-icon flag-icon-vn"></span> Tiếng
+                        Việt</a
                       >
                     </li>
                   </ul>
@@ -192,11 +194,11 @@
 
           <div class="col-sm-6">
             <div class="shopping-item">
-              <a href="cart.html"
-                >Giỏ Hàng - <span class="cart-amunt">$100</span>
+              <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">99</span></a
-              >
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
+                <span class="product-count">99</span>
+                </a>
             </div>
           </div>
         </div>
@@ -225,7 +227,9 @@
             -->
             <span class="navbar-toggler-icon"></span>
           </button>
-          <span class="navbar-brand"><a href="index.html">Bông Xù Store</a></span>
+          <span class="navbar-brand"
+            ><a href="index.html">Bông Xù Store</a></span
+          >
           <!-- </div> -->
           <div class="navbar-collapse collapse" id="main-navbar-collapse">
             <ul class="nav navbar-nav mr-auto">
@@ -251,7 +255,7 @@
               <!--
                 <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
               -->
-  
+
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -286,7 +290,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="checkout.html">
                   <span class="nav-hidden">
-                    <span class="fa fa-2x far fa-credit-card"></span><br>
+                    <span class="fa fa-2x far fa-credit-card"></span><br />
                   </span>
                   Thanh toán
                 </a>
@@ -316,36 +320,37 @@
       </div>
     </div>
     <!-- End mainmenu area -->
-<!-------------------------------------------------------------------------------------->
+    <!--
+      ----------------------------------------------------------------------------------
+    -->
     <div class="maincontent-area">
       <div class="container">
         <div class="content-contact">
           <div class="content-conntact-left">
-            <h1>Góp ý</h1> 
+            <h1>Góp ý</h1>
             <form action="">
               <h5>Tên của bạn (bắt buộc):</h5>
-              <input type="text" name="name"><br><br>
+              <input type="text" name="name" /><br /><br />
               <h5>Email (bắt buộc):</h5>
-              <input type="text" name="email"><br><br>
+              <input type="text" name="email" /><br /><br />
               <h5>Tiêu đề:</h5>
-              <input type="text" name="email">
-              <br><br>
+              <input type="text" name="email" /> <br /><br />
               <h5>Nội dung:</h5>
-              <textarea></textarea><br><br>
-              <input type="submit" value="Gửi đi">
+              <textarea></textarea><br /><br />
+              <input type="submit" value="Gửi đi" />
             </form>
           </div>
           <div class="content-conntact-right">
             <h1>Liên hệ</h1>
             <div class="">
               <h5>Bông Xù Store - Chuyên gấu bông cho đời sống thêm vui</h5>
-              <br>
-              <h5>Địa chỉ:</h5> 
+              <br />
+              <h5>Địa chỉ:</h5>
               <p>280 An Dương Vương, Phường 4, Quận 5, TP.HCM</p>
               <h5>ĐT:</h5>
               <p>0935587687</p>
-              
-              <h5>Email:</h5> 
+
+              <h5>Email:</h5>
               <p>chelinh123@gmail.com</p>
             </div>
             <div class="footer-social">
@@ -358,9 +363,11 @@
         </div>
       </div>
     </div>
-    <div style="clear: left;"><br></div>
+    <div style="clear: left;"><br /></div>
     <!-- End main content area -->
-<!-------------------------------------------------------------------------------------->
+    <!--
+      ----------------------------------------------------------------------------------
+    -->
     <div class="footer-top-area">
       <div class="zigzag-bottom"></div>
       <div class="container">
@@ -369,13 +376,26 @@
             <div class="footer-about-us">
               <h2><span>Bông Xù Store</span></h2>
               <p>
-                Cửa hàng chúng tôi bán tất cả các loại thú bông có trên Thế Giới. Chúng tôi liên kết với tất cả các công ty và doanh nghiệp nổi tiếng trên toàn Thế Giới, vì vậy chất lượng thú bông của chúng tôi rất tuyệt vời và đáng giá mà các bạn bỏ ra. Các bạn có thể đặt làm thú nhồi bông riêng theo mẫu hình, khuôn mà các bạn có, giá cả rất hợp lý, nhận, làm và giao hàng rất nhanh.
+                Cửa hàng chúng tôi bán tất cả các loại thú bông có trên Thế
+                Giới. Chúng tôi liên kết với tất cả các công ty và doanh nghiệp
+                nổi tiếng trên toàn Thế Giới, vì vậy chất lượng thú bông của
+                chúng tôi rất tuyệt vời và đáng giá mà các bạn bỏ ra. Các bạn có
+                thể đặt làm thú nhồi bông riêng theo mẫu hình, khuôn mà các bạn
+                có, giá cả rất hợp lý, nhận, làm và giao hàng rất nhanh.
               </p>
               <div class="footer-social">
-                <a href="https://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="https://youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
-                <a href="https://linkedin.com" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa fa-twitter"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa fa-youtube"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -408,7 +428,8 @@
             <div class="footer-newsletter">
               <h2 class="footer-wid-title">Nhận thông báo</h2>
               <p>
-                Nếu bạn muốn nhận thông tin mới nhất của chúng tôi thường xuyên, hãy đăng ký Email ở đây nhé!
+                Nếu bạn muốn nhận thông tin mới nhất của chúng tôi thường xuyên,
+                hãy đăng ký Email ở đây nhé!
               </p>
               <div class="newsletter-form">
                 <form action="#">
@@ -452,7 +473,10 @@
     <div action="#" class="modal fade" role="dialog" id="login-dialog">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header" style="background: #5a88ca url('img/crossword.png') repeat;">
+          <div
+            class="modal-header"
+            style="background: #5a88ca url('img/crossword.png') repeat;"
+          >
             <button class="close" data-dismiss="modal">x</button>
           </div>
           <div class="modal-body">
@@ -478,35 +502,65 @@
                   </li>
                 </ul>
               </div>
-              <form action="" class="col-md-6 ml-auto text-center" id="login-form">
+              <form
+                action=""
+                class="col-md-6 ml-auto text-center"
+                id="login-form"
+              >
                 <h4 class="modal-title">Đăng nhập</h4>
                 <label for="loginID">Tên đăng nhập</label>
-                <input type="text" name="loginID" placeholder="Tên đăng nhập..."/>
+                <input
+                  type="text"
+                  name="loginID"
+                  placeholder="Tên đăng nhập..."
+                />
                 <label for="loginPW">Mật khẩu</label>
-                <input type="password" name="loginPW" placeholder="Mật khẩu..."/>
+                <input
+                  type="password"
+                  name="loginPW"
+                  placeholder="Mật khẩu..."
+                />
                 <label>
-                  Chưa có tài khoản? <a href="#" class="openReg" onclick="switchForm('register')">Đăng ký</a>
+                  Chưa có tài khoản?
+                  <a href="#" class="openReg" onclick="switchForm('register')"
+                    >Đăng ký</a
+                  >
                 </label>
                 <label>
-                  Quên mật khẩu? <a href="#" class="openForgetPW">Tìm mật khẩu</a>
+                  Quên mật khẩu?
+                  <a href="#" class="openForgetPW">Tìm mật khẩu</a>
                 </label>
                 <button type="submit" class="btn">Đăng nhập</button>
               </form>
-              <form action="" class="col-md-6 ml-auto text-center" id="register-form" style="display: none;">
+              <form
+                action=""
+                class="col-md-6 ml-auto text-center"
+                id="register-form"
+                style="display: none;"
+              >
                 <h5 class="modal-title">Đăng ký</h5>
                 <label for="regID">Tên đăng nhập</label>
-                <input type="text" name="regID" placeholder="Tên đăng nhập..."/>
+                <input
+                  type="text"
+                  name="regID"
+                  placeholder="Tên đăng nhập..."
+                />
                 <label for="regPW">Mật khẩu</label>
-                <input type="password" name="regPW" placeholder="Mật khẩu..."/>
+                <input type="password" name="regPW" placeholder="Mật khẩu..." />
                 <label for="regMail">Địa chỉ Email</label>
-                <input type="email" name="regMail" placeholder="abc@xyz.com"/>
-                <label>Đã có tài khoản? <a href="#" onclick="switchForm('login')">Đăng nhập</a></label>
+                <input type="email" name="regMail" placeholder="abc@xyz.com" />
+                <label
+                  >Đã có tài khoản?
+                  <a href="#" onclick="switchForm('login')">Đăng nhập</a></label
+                >
                 <button type="submit" class="btn">Đăng ký</button>
               </form>
             </div>
           </div>
           <div class="modal-footer">
-            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy 2018</span>
+            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;"
+              >Bông Xù Store &copy 2018</span
+            >
           </div>
         </div>
       </div>
