--- a/shop.html
+++ b/shop.html
@@ -151,14 +151,13 @@
           </div>
 
           <div class="col-sm-6">
-            <div class="shopping-item">
-              <a href="cart.html"
-                >Giỏ Hàng - <span class="cart-amunt">$100</span>
-                <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">99</span></a
-              >
+                <div class="shopping-item">
+                  <a href="cart.html">
+                    <i class="fa fa-shopping-cart"></i>
+                    <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
+                    <span class="product-count">99</span></a>
+                </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
@@ -1547,6 +1546,7 @@
 
     <!-- Main Script -->
     <script src="js/main.js"></script>
+    <script src="js/shoppingcart.js"></script>
 
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
