Update Drag&Drop function

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             </div>
           </div>
 
-          <div class="col-sm-6">
-            <div class="shopping-item">
+          <div class="col-sm-6" >
+            <div class="shopping-item" ondrop="dropCart(event)" ondragover="allowDrop(event)">
               <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
                 <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
@@ -382,16 +382,16 @@
               <h2 class="section-title">Hàng mới nhất</h2>
               <div class="product-carousel">
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/small/img2.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -405,16 +405,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/small/img6.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -428,16 +428,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/small/img10.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -451,16 +451,16 @@
                 </div>
 
   
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/small/img9.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -474,16 +474,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/large/img15.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -497,16 +497,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/large/img22.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -520,16 +520,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/large/img17.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -543,16 +543,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/pokemon/img31.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -566,16 +566,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/pokemon/img61.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -589,16 +589,16 @@
                 </div>
 
 
-                <div class="single-product">
+                <div class="single-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="2">
                   <div class="product-f-image">
                     <img src="images/pokemon/img62.jpg" alt="" style="width: 205px; height: 257px;" />
                     <div class="product-hover">
-                      <a href="cart.html" class="add-to-cart-link"
-                        ><i class="fa fa-shopping-cart"></i> Mua hàng</a
-                      >
-                      <a href="single-product.html" class="view-details-link"
-                        ><i class="fa fa-link"></i> Xem chi tiết</a
-                      >
+                      <a href="cart.html" class="add-to-cart-link">
+                        <i class="fa fa-shopping-cart"></i> Mua hàng
+                      </a>
+                      <a href="single-product.html" class="view-details-link">
+                        <i class="fa fa-link"></i> Xem chi tiết
+                      </a>
                     </div>
                   </div>
 
@@ -653,16 +653,15 @@
               <a href="shop.html" class="wid-view-more">Xem tất cả</a>
 
               <div class="single-wid-product">
-                <a href="single-product.html"
-                  ><img
-                    src="images/small/img10.jpg"
-                    alt=""
-                    class="product-thumb"
-                /></a>
+                <a href="single-product.html">
+                  <img src="images/small/img10.jpg" alt="" class="product-thumb"/>
+                </a>
                 <h2><a href="single-product.html">Gấu bông cặp VIOLET-PINK</a></h2>
                 <div class="product-wid-rating">
-                  <i class="fa fa-star"></i> <i class="fa fa-star"></i>
-                  <i class="fa fa-star"></i> <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i> 
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i> 
+                  <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
@@ -1016,6 +1015,7 @@
     <!-- Main Script -->
     <script src="js/main.js"></script>
     <script src="js/shoppingcart.js"></script>
+    <script src="var.js"></script>
 
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
